// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiRange allows value prop to accept a number 1`] = `
<div
  class="euiRangeWrapper euiRange emotion-euiRangeWrapper-regular-euiRange"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack emotion-euiRangeTrack"
  >
    <input
      aria-hidden="false"
      class="euiRangeSlider emotion-euiRangeSlider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      type="range"
      value="8"
    />
    <div
      class="euiRangeTooltip emotion-euiRangeTooltip"
    >
      <output
        class="euiRangeTooltip__value emotion-euiRangeTooltip__value-right"
        style="inset-inline-start: 8%;"
      >
        8
      </output>
    </div>
  </div>
</div>
`;

exports[`EuiRange allows value prop to accept empty string 1`] = `
<div
  class="euiRangeWrapper euiRange emotion-euiRangeWrapper-regular-euiRange"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack emotion-euiRangeTrack"
  >
    <input
      aria-hidden="false"
      class="euiRangeSlider emotion-euiRangeSlider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      type="range"
      value=""
    />
  </div>
</div>
`;

exports[`EuiRange inherits fullWidth from <EuiForm /> 1`] = `
<div
  class="euiForm"
>
  <div
    class="euiRangeWrapper euiRange emotion-euiRangeWrapper-regular-fullWidth-euiRange"
  >
    <div
      aria-hidden="false"
      class="euiRangeTrack emotion-euiRangeTrack"
    >
      <input
        aria-hidden="false"
        class="euiRangeSlider emotion-euiRangeSlider"
        id="generated-id"
        max="100"
        min="0"
        step="1"
        type="range"
        value="20"
      />
    </div>
  </div>
</div>
`;

exports[`EuiRange is rendered 1`] = `
<div
  class="euiRangeWrapper euiRange testClass1 testClass2 emotion-euiRangeWrapper-regular-euiRange-euiTestCss"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack emotion-euiRangeTrack"
  >
    <input
      aria-hidden="false"
      aria-label="aria-label"
      class="euiRangeSlider emotion-euiRangeSlider"
      data-test-subj="test subject string"
      id="id"
      max="100"
      min="0"
      name="name"
      step="1"
      type="range"
      value="8"
    />
  </div>
</div>
`;

exports[`EuiRange props compressed should render 1`] = `
<div
  class="euiRangeWrapper euiRange emotion-euiRangeWrapper-compressed-euiRange"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack emotion-euiRangeTrack"
  >
    <input
      aria-hidden="false"
      class="euiRangeSlider emotion-euiRangeSlider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      type="range"
      value="8"
    />
  </div>
</div>
`;

exports[`EuiRange props custom ticks should render 1`] = `
<div
  class="euiRangeWrapper euiRange emotion-euiRangeWrapper-regular-euiRange"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack emotion-euiRangeTrack-hasTicks"
  >
    <div
      class="euiRangeTicks emotion-euiRangeTicks-regular-isCustom"
    >
      <button
        class="euiRangeTick emotion-euiRangeTick-isCustom-hasPseudoTickMark-regular"
        style="inset-inline-start: calc(-Infinity% + 8px);"
        tabindex="-1"
        title="20kb"
        type="button"
        value="20"
      >
        20kb
      </button>
      <button
        class="euiRangeTick emotion-euiRangeTick-isCustom-isMax-regular"
        style="inset-inline-end: 0%; margin-inline-end: -1.25em;"
        tabindex="-1"
        title="100kb"
        type="button"
        value="100"
      >
        <span
          aria-hidden="true"
          class="euiRangeTick__pseudo emotion-euiRangeTick__pseudo"
          style="margin-inline-end: calc(1.25em + 4px);"
        />
        100kb
      </button>
    </div>
    <input
      aria-hidden="false"
      class="euiRangeSlider emotion-euiRangeSlider-hasTicks"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      type="range"
      value="8"
    />
  </div>
</div>
`;

exports[`EuiRange props disabled should render 1`] = `
<div
  class="euiRangeWrapper euiRange emotion-euiRangeWrapper-regular-euiRange"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack emotion-euiRangeTrack-disabled"
  >
    <input
      aria-hidden="false"
      class="euiRangeSlider emotion-euiRangeSlider"
      disabled=""
      id="generated-id"
      max="100"
      min="0"
      step="1"
      type="range"
      value="8"
    />
  </div>
</div>
`;

exports[`EuiRange props fullWidth should render 1`] = `
<div
  class="euiRangeWrapper euiRange emotion-euiRangeWrapper-regular-fullWidth-euiRange"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack emotion-euiRangeTrack"
  >
    <input
      aria-hidden="false"
      class="euiRangeSlider emotion-euiRangeSlider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      type="range"
      value="8"
    />
  </div>
</div>
`;

exports[`EuiRange props input should render 1`] = `
<div
  class="euiRangeWrapper euiRange testClass1 testClass2 emotion-euiRangeWrapper-regular-euiRange-hasInput-euiTestCss"
>
  <div
    aria-hidden="true"
    class="euiRangeTrack emotion-euiRangeTrack"
  >
    <input
      aria-hidden="true"
      aria-label="aria-label"
      class="euiRangeSlider emotion-euiRangeSlider"
      data-test-subj="test subject string"
      max="100"
      min="0"
      name="name"
      step="1"
      tabindex="-1"
      type="range"
      value="8"
    />
  </div>
  <div
    class="euiRange__horizontalSpacer emotion-euiRange__horizontalSpacer"
  />
  <div
    class="euiFormControlLayout"
  >
    <div
      class="euiFormControlLayout__childrenWrapper"
    >
      <input
        aria-label="aria-label"
        class="euiFieldNumber euiRangeInput euiRangeInput--max emotion-euiRangeInput"
        data-test-subj="test subject string"
        id="id"
        max="100"
        min="0"
        name="name"
        step="1"
        style="inline-size: calc(12px + 1ch + 2em + 0px);"
        type="number"
        value="8"
      />
    </div>
  </div>
</div>
`;

exports[`EuiRange props labels should render 1`] = `
<div
  class="euiRangeWrapper euiRange emotion-euiRangeWrapper-regular-euiRange"
>
  <label
    class="euiRangeLabel emotion-euiRangeLabel-min"
  >
    0
  </label>
  <div
    aria-hidden="false"
    class="euiRangeTrack emotion-euiRangeTrack"
  >
    <input
      aria-hidden="false"
      class="euiRangeSlider emotion-euiRangeSlider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      type="range"
      value="8"
    />
  </div>
  <label
    class="euiRangeLabel emotion-euiRangeLabel-max"
  >
    100
  </label>
</div>
`;

exports[`EuiRange props levels should render 1`] = `
<div
  class="euiRangeWrapper euiRange emotion-euiRangeWrapper-regular-euiRange"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack emotion-euiRangeTrack-hasLevels"
  >
    <div
      class="euiRangeLevels emotion-euiRangeLevels"
    >
      <span
        class="euiRangeLevel emotion-euiRangeLevel-danger"
        style="inset-inline-start: calc(0% + 0px); inset-inline-end: calc(100% - 0px);"
      />
      <span
        class="euiRangeLevel emotion-euiRangeLevel-success"
        style="inset-inline-start: calc(0% + 0px); inset-inline-end: calc(100% - 0px);"
      />
    </div>
    <input
      aria-hidden="false"
      class="euiRangeSlider emotion-euiRangeSlider-thumb"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      style="color: rgb(189, 39, 30);"
      type="range"
      value="20"
    />
  </div>
</div>
`;

exports[`EuiRange props loading should display when showInput="inputWithPopover" 1`] = `
<div
  class="euiPopover euiInputPopover euiRange__popover emotion-euiPopover-EuiInputPopover"
>
  <div
    class="euiPopover__anchor css-zih94u-render"
  >
    <div>
      <div
        class="euiFormControlLayout"
      >
        <div
          class="euiFormControlLayout__childrenWrapper"
        >
          <input
            aria-label="aria-label"
            class="euiFieldNumber euiRangeInput euiRangeInput--max emotion-euiRangeInput euiFormControlLayout--1icons euiFieldNumber-isLoading"
            data-test-subj="test subject string"
            id="id"
            max="100"
            min="0"
            name="name"
            step="1"
            type="number"
            value="8"
          />
          <div
            class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right euiFormControlLayoutIcons--absolute"
          >
            <span
              aria-label="Loading"
              class="euiLoadingSpinner emotion-euiLoadingSpinner-m"
              role="progressbar"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiRange props range should render 1`] = `
<div
  class="euiRangeWrapper euiRange emotion-euiRangeWrapper-regular-euiRange"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack emotion-euiRangeTrack"
  >
    <input
      aria-hidden="false"
      class="euiRangeSlider emotion-euiRangeSlider-hasRange"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      type="range"
      value="8"
    />
    <div
      class="euiRangeHighlight emotion-euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress emotion-euiRangeHighlight__progress"
        style="margin-inline-start: 0%; inline-size: 8%;"
      />
    </div>
  </div>
</div>
`;

exports[`EuiRange props slider should display in popover 1`] = `
<div
  class="euiPopover euiInputPopover euiRange__popover emotion-euiPopover-EuiInputPopover"
>
  <div
    class="euiPopover__anchor css-zih94u-render"
  >
    <div>
      <div
        class="euiFormControlLayout"
      >
        <div
          class="euiFormControlLayout__childrenWrapper"
        >
          <input
            aria-label="aria-label"
            class="euiFieldNumber euiRangeInput euiRangeInput--max emotion-euiRangeInput"
            data-test-subj="test subject string"
            id="id"
            max="100"
            min="0"
            name="name"
            step="1"
            type="number"
            value="8"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiRange props ticks should render 1`] = `
<div
  class="euiRangeWrapper euiRange emotion-euiRangeWrapper-regular-euiRange"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack emotion-euiRangeTrack-hasTicks"
  >
    <div
      class="euiRangeTicks emotion-euiRangeTicks-regular"
    >
      <button
        class="euiRangeTick emotion-euiRangeTick-hasPseudoTickMark-regular"
        style="inset-inline-start: calc(NaN% + 8px); max-inline-size: 16.666666666666664%;"
        tabindex="-1"
        title="0"
        type="button"
        value="0"
      >
        0
      </button>
      <button
        class="euiRangeTick emotion-euiRangeTick-hasPseudoTickMark-regular"
        style="inset-inline-start: calc(-Infinity% + 8px); max-inline-size: 16.666666666666664%;"
        tabindex="-1"
        title="20"
        type="button"
        value="20"
      >
        20
      </button>
      <button
        class="euiRangeTick emotion-euiRangeTick-hasPseudoTickMark-regular"
        style="inset-inline-start: calc(-Infinity% + 8px); max-inline-size: 16.666666666666664%;"
        tabindex="-1"
        title="40"
        type="button"
        value="40"
      >
        40
      </button>
      <button
        class="euiRangeTick emotion-euiRangeTick-hasPseudoTickMark-regular"
        style="inset-inline-start: calc(-Infinity% + 8px); max-inline-size: 16.666666666666664%;"
        tabindex="-1"
        title="60"
        type="button"
        value="60"
      >
        60
      </button>
      <button
        class="euiRangeTick emotion-euiRangeTick-hasPseudoTickMark-regular"
        style="inset-inline-start: calc(-Infinity% + 8px); max-inline-size: 16.666666666666664%;"
        tabindex="-1"
        title="80"
        type="button"
        value="80"
      >
        80
      </button>
      <button
        class="euiRangeTick emotion-euiRangeTick-hasPseudoTickMark-regular"
        style="inset-inline-start: calc(-Infinity% + 8px); max-inline-size: 16.666666666666664%;"
        tabindex="-1"
        title="100"
        type="button"
        value="100"
      >
        100
      </button>
    </div>
    <input
      aria-hidden="false"
      class="euiRangeSlider emotion-euiRangeSlider-hasTicks"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      type="range"
      value="8"
    />
  </div>
</div>
`;

exports[`EuiRange props value should render 1`] = `
<div
  class="euiRangeWrapper euiRange emotion-euiRangeWrapper-regular-euiRange"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack emotion-euiRangeTrack"
  >
    <input
      aria-hidden="false"
      class="euiRangeSlider emotion-euiRangeSlider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      type="range"
      value="200"
    />
    <div
      class="euiRangeTooltip emotion-euiRangeTooltip"
    >
      <output
        class="euiRangeTooltip__value emotion-euiRangeTooltip__value-left"
        style="inset-inline-end: 0%;"
      >
        before
        200
        after
      </output>
    </div>
  </div>
</div>
`;
